2007-07-02  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Navigation/Tag.cs, Navigation/Variable.cs,
	  Navigation/TagDatabaseManager.cs,
	  Navigation/ProjectNavigationInformation.cs,
	  Navigation/GlobalsNodeBuilder.cs,
	  Navigation/VariableNodeBuilder.cs, Makefile.am, CBinding.addin.xml,
	  CBinding.mdp: Added support for global variables to be added to the
	  class pad. Also fixed options sent to ctags so macro difinitions
	  can now be easily handled.

2007-07-01  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Navigation/Tag.cs, Navigation/StructureNodeBuilder.cs,
	  Navigation/ClassNodeBuilder.cs, Navigation/MemberNodeBuilder.cs,
	  Navigation/TagDatabaseManager.cs,
	  Navigation/ProjectNavigationInformation.cs, Navigation/Member.cs,
	  Makefile.am, CBinding.addin.xml, CBinding.mdp: Added support for
	  members.
	* Navigation/Function.cs, Navigation/Namespace.cs, Navigation/Class.cs:
	  Removed some unused usings.

2007-07-01  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Navigation/Tag.cs, Navigation/Function.cs,
	  Navigation/TagDatabaseManager.cs, Navigation/LanguageItem.cs:
	  Separated the parse structure from the parser.

2007-07-01  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Navigation/Tag.cs, Navigation/LanguageItem.cs: Optimized memory usage
	  by parsing fields as the tags a read in.

2007-06-30  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Navigation/StructureNodeBuilder.cs,
	  Navigation/ProjectNodeBuilderExtension.cs,
	  Navigation/ClassNodeBuilder.cs, Navigation/Function.cs,
	  Navigation/TagDatabaseManager.cs,
	  Navigation/ProjectNavigationInformation.cs,
	  Navigation/Namespace.cs, Navigation/LanguageItemCommandHandler.cs,
	  Navigation/Structure.cs, Navigation/GlobalsNodeBuilder.cs,
	  Navigation/LanguageItem.cs, Navigation/FunctionNodeBuilder.cs,
	  Navigation/Class.cs, Navigation/NamespaceNodeBuilder.cs,
	  Makefile.am, CBinding.addin.xml, CBinding.mdp: Added structures to