@@ -77,6 +77,9 @@
     <File name="./Navigation/MemberNodeBuilder.cs" subtype="Code" buildaction="Compile" />
     <File name="./Navigation/Variable.cs" subtype="Code" buildaction="Compile" />
     <File name="./Navigation/VariableNodeBuilder.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Navigation/Macro.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Navigation/MacroNodeBuilder.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Navigation/MacroDefinitionsNodeBuilder.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
