@@ -1,5 +1,5 @@
 //
-// ProjectNodeBuilderExtension.cs
+// Macro.cs
 //
 // Authors:
 //   Marcos David Marin Amador <MarcosMarin@gmail.com>
@@ -30,64 +30,15 @@
 //
 
 using System;
-using System.IO;
-
-using Mono.Addins;
 
 using MonoDevelop.Projects;
-using MonoDevelop.Ide.Gui;
-using MonoDevelop.Ide.Gui.Pads;
-
-using CBinding;
 
 namespace CBinding.Navigation
 {
-	public class ProjectNodeBuilderExtension : NodeBuilderExtension
+	public class Macro : LanguageItem
 	{
-		public override bool CanBuildNode (Type dataType)
+		public Macro (Tag tag, Project project) : base (tag, project)
 		{
-			return typeof(CProject).IsAssignableFrom (dataType);
-		}
-		
-		public override void BuildChildNodes (ITreeBuilder builder, object dataObject)
-		{
-			CProject p = dataObject as CProject;
-			
-			if (p == null) return;
-			
-			try {
-				TagDatabaseManager.Instance.WriteTags (p);
-				TagDatabaseManager.Instance.FillProjectNavigationInformation (p);
-			} catch (IOException ex) {
-				IdeApp.Services.MessageService.ShowError (ex);
-				return;
-			}
-			
-			bool nestedNamespaces = builder.Options["NestedNamespaces"];
-			
-			ProjectNavigationInformation info = ProjectNavigationInformationManager.Instance.Get (p);
-			
-			// Namespaces
-			foreach (Namespace n in info.Namespaces) {
-				if (nestedNamespaces) {
-					if (n.Parent == null) {
-						builder.AddChild (n);
-					}
-				} else {
-					builder.AddChild (n);
-				}
-			}
-			
-			// Globals
-			builder.AddChild (Globals.Instance);
-			
-			// Macro Definitions
-			builder.AddChild (MacroDefinitions.Instance);
-		}
-		
-		public override bool HasChildNodes (ITreeBuilder builder, object dataObject)
-		{
-			return true;
 		}
 	}
 }
