@@ -1,5 +1,5 @@
 //
-// GlobalsNodeBuilder.cs
+// MacroNodeBuilder.cs
 //
 // Authors:
 //   Marcos David Marin Amador <MarcosMarin@gmail.com>
@@ -30,6 +30,7 @@
 //
 
 using System;
+using System.IO;
 
 using Mono.Addins;
 
@@ -40,33 +41,19 @@ using MonoDevelop.Projects;
 
 namespace CBinding.Navigation
 {
-	public class Globals
-	{
-		private static Globals instance;
-		
-		private Globals ()
-		{
-		}
-		
-		public static Globals Instance {
-			get {
-				if (instance == null)
-					instance = new Globals ();
-				
-				return instance;
-			}
-		}
-	}
-	
-	public class GlobalsNodeBuilder : TypeNodeBuilder
+	public class MacroNodeBuilder : TypeNodeBuilder
 	{
 		public override Type NodeDataType {
-			get { return typeof(Globals); }
+			get { return typeof(Macro); }
+		}
+		
+		public override Type CommandHandlerType {
+			get { return typeof(LanguageItemCommandHandler); }
 		}
 		
 		public override string GetNodeName (ITreeNavigator thisNode, object dataObject)
 		{
-			return "Globals";
+			return ((Macro)dataObject).Name;
 		}
 		
 		public override void BuildNode (ITreeBuilder treeBuilder,
@@ -75,49 +62,15 @@ namespace CBinding.Navigation
 		                                ref Gdk.Pixbuf icon,
 		                                ref Gdk.Pixbuf closedIcon)
 		{
-			label = "Globals";
-			icon = Context.GetIcon (Stock.Method);
-		}
-		
-		public override void BuildChildNodes (ITreeBuilder treeBuilder, object dataObject)
-		{
-			CProject p = treeBuilder.GetParentDataItem (typeof(CProject), false) as CProject;
-			
-			if (p == null) return;
-			
-			ProjectNavigationInformation info = ProjectNavigationInformationManager.Instance.Get (p);
-			
-			// Classes
-			foreach (Class c in info.Classes)
-				if (c.Parent == null)
-					treeBuilder.AddChild (c);
-			
-			// Structures
-			foreach (Structure s in info.Structures)
-				if (s.Parent == null)
-					treeBuilder.AddChild (s);
-			
-			// Functions
-			foreach (Function f in info.Functions)
-				if (f.Parent == null)
-					treeBuilder.AddChild (f);
-			
-			// Variables
-			foreach (Variable v in info.Variables)
-				treeBuilder.AddChild (v);
+			Macro m = (Macro)dataObject;
+				
+			label = m.Name;
+			icon = Context.GetIcon (Stock.Literal);
 		}
 		
 		public override bool HasChildNodes (ITreeBuilder builder, object dataObject)
 		{
-			return true;
-		}
-		
-		public override int CompareObjects (ITreeNavigator thisNode, ITreeNavigator otherNode)
-		{
-			if (otherNode.DataItem is Structure)
-				return 1;
-			else
-				return -1;
+			return false;
 		}
 	}
 }
